Fix about page wrong info

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ function clearText(field)
           </p>
 
           <p>
-            Όσο για τη δίκη μου, έγινε μετά τον θάνατο του Αλεξάνδρου, όταν οι αντίπαλοί μου στη φιλοσοφία με κατηγόρησαν για ασέβεια στους θεούς. Προτίμησα να φύγω από την Αθήνα παρά να υποστώ την τιμωρία που θα μου αποδοθεί, όπως επέλεξε και ο Σωκράτης αργότερα. Πέθανα το 322 π.Χ. στη Χαλκιδική.
+            Όσο για τη δίκη μου, έγινε μετά τον θάνατο του Αλεξάνδρου, όταν οι αντίπαλοί μου στη φιλοσοφία με κατηγόρησαν για ασέβεια στους θεούς. Προτίμησα να φύγω από την Αθήνα παρά να υποστώ την τιμωρία που θα μου αποδοθεί, όπως και ο Σωκράτης. Πέθανα το 322 π.Χ. στη Χαλκιδική.
           </p>
           <p>
             Παρόλο που η δίκη μου δεν είχε καλό τέλος, θεωρούμαι ένας από τους σπουδαιότερους φιλοσόφους και επιστήμονες της ανθρωπότητας. Η επιρροή μου στη δυτική φιλοσοφία και επιστήμη έχει παραμείνει σημαντική μέχρι σήμερα. Είχα την τύχη να γνωρίσω πολλούς σημαντικούς ανθρώπους της εποχής μου, όπως ο Πλάτωνας, ο Αλέξανδρος ο Μέγας και άλλοι.
