--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@ function clearText(field)
                 
               <div class="cleaner h30"></div>
               <h3>Ασχολίες</h3>
-                <p>Ωραία, ας περιγράψουμε λίγο τα hobbies μου! Λοιπόν, πέρα από τη φιλοσοφία, αγαπώ την ποίηση, το θέατρο και την φιλοσοφία. Λατρεύω να συγγράφω ποιήματα και να διαβάζω κλασικά έργα του θεάτρου. Επίσης, ενδιαφέρομαι πολύ για την οικολογία και την βιωσιμότητα και προσπαθώ να επιστρέψω στη φύση όσο το δυνατόν περισσότερο. Μου αρέσει επίσης να πειραματίζομαι και να ανακαλύπτω νέα πράγματα στον κόσμο της επιστήμης και της τεχνολογίας. Αν και, ας πούμε, η οικογένειά μου θα ήθελε να ασχολούμαι λίγο περισσότερο με την πολιτική και λιγότερο με τις τρέλες μου.</p>
+                <p>Ωραία, ας περιγράψουμε λίγο τα hobbies μου! Λοιπόν, πέρα από τη φιλοσοφία, αγαπώ την ποίηση, το θέατρο και την φύση. Λατρεύω να συγγράφω ποιήματα και να διαβάζω κλασικά έργα του θεάτρου. Επίσης, ενδιαφέρομαι πολύ για την οικολογία και την βιωσιμότητα και προσπαθώ να επιστρέψω στη φύση όσο το δυνατόν περισσότερο. Μου αρέσει επίσης να πειραματίζομαι και να ανακαλύπτω νέα πράγματα στον κόσμο της επιστήμης και της τεχνολογίας. Αν και, ας πούμε, η οικογένειά μου θα ήθελε να ασχολούμαι λίγο περισσότερο με την πολιτική και λιγότερο με τις τρέλες μου.</p>
 
                 
               <div class="cleaner"></div>
