--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
 <meta name="description" content="" />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
 
-<script language="javascript" type="text/javascript">
-function clearText(field)
-{
-    if (field.defaultValue == field.value) field.value = '';
-    else if (field.value == '') field.value = field.defaultValue;
-}
-</script>
 
 </head>
 <body>
@@ -40,13 +33,13 @@ function clearText(field)
     <div id="templatemo_main">
     	<div class="cbox_fw">
         	<h2>Ο αφέντης αυτών που γνωρίζουν</h2>
-            <a href="#"><img src="https://todayinsci.com/A/Aristotle/Aristotle300px.jpg" alt="image" class="image_frame image_fl" /></a>
+            <a href=""><img src="https://todayinsci.com/A/Aristotle/Aristotle300px.jpg" alt="image" class="image_frame image_fl" style="width: 15em;height: 15em" /></a>
            <p>Δεν είναι τυχαίο που με φωνάζουν μέχρι και σήμερα έτσι οι ξένοι. </p>
 			<p>
                 Τα έργα μου είναι αυτά που άλλαξαν τον ανθρώπινο νου και την αντίληψη του για τον κόσμο.
                 Υπήρξα ο πρώτος γνήσιος επιστήμονας στην ιστορία... και κάθε σημερινός επιστήμονας μου οφείλει κάτι.
                 Έγραψα ό,τι θες: από Λογικά και Φυσικά, μέχρι Ψυχολογία και Ηθικά, το έργο μου στην φιλοσοφία και την πολιτική
-                είναι πολυσχιδές. Πριν ο Σωκράτης στρέψει το φιλοσοφικό βλέμμα από τον ουρανό στη Γη, εγώ (μαζί με τον φίλο μου τον Πλάτων) ήμασταν
+                είναι πολυσχιδές. Αφού ο Σωκράτης έστρεψε το φιλοσοφικό βλέμμα από τον ουρανό στη Γη, εγώ (μαζί με τον φίλο μου τον Πλάτων) ήμασταν
                 οι δημιουργοί στης φυσικής επιστήμης, της ζωολογίας και της συγκριτικής ανατομίας.
             </p>
             <p>Σε αυτήν την ιστοσελίδα, λοιπόν, θα μάθετε ό,τι χρειάζεται να ξέρετε για μένα. Ας αρχίσουμε!</p>
