--- a/about.html
+++ b/about.html
@@ -147,11 +147,11 @@
 						<p>
 							Αριστερά, αυτός ο γεράκος είναι ο Πλάτωνας, ο δάσκαλος μου.
 							Το χέρι του δείχνει προς τα πάνω, πράγμα που υποδηλώνει τον μη
-							ρεαλισμό του θα λέγαμε. Αντίθετα, δεξιά του βρίσκομαι εγώ ,πιο νέος βέβαια, και το χέρι μου δείχνει προς τα
+							ρεαλισμό του θα λέγαμε. Αντίθετα, δεξιά του βρίσκομαι εγώ, πιο νέος βέβαια, και το χέρι μου δείχνει προς τα
 							κάτω. Αυτό υποδηλώνει τον ρεαλισμό μου.
 						</p>
             <p>
-              Γενικά, ο Πλάτωνας χρησιμοποιούσε πάρα πολύ τους μύθους στη φιλοσοφία του και η φιλοσοφία του ήταν προϊόν φαντασίας. Πιο συγκεκριμένα, όταν ήθελε να περιγράψει κάτι χρησιμοποιούσε μεταφυσικές ιστορίες. Αυτά δεν τα έκανα ποτέ εγώ. Αντιθέτως, απλά παρατηρούσα ότι γινόταν στη φύση και το περιέγραφα. 
+              Γενικά, ο Πλάτωνας χρησιμοποιούσε πάρα πολύ τους μύθους στη φιλοσοφία του και η φιλοσοφία του ήταν προϊόν φαντασίας. Πιο συγκεκριμένα, όταν ήθελε να περιγράψει κάτι χρησιμοποιούσε μεταφυσικές ιστορίες. Αυτά δεν τα έκανα ποτέ εγώ. Αντιθέτως, απλά παρατηρούσα ό,τι γινόταν στη φύση και το περιέγραφα. 
             </p>
 					</div>
 
