--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 						σπουδαιότερους φιλοσόφους και επιστήμονες της ανθρωπότητας. Η
 						επιρροή μου στη δυτική φιλοσοφία και επιστήμη έχει παραμείνει
 						σημαντική μέχρι σήμερα. Είχα την τύχη να γνωρίσω πολλούς σημαντικούς
-						ανθρώπους της εποχής μου, όπως ο Πλάτωνας, ο Μέγας Αλέξανδρος ο
+						ανθρώπους της εποχής μου, όπως ο Πλάτωνας, ο Αλέξανδρος ο
 						Μέγας και άλλοι.
 					</p>
 					<p>
